# netsound

./: .drone.yml  .gitignore  .travis.yml  Cargo.toml  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/scripts/build_env/: macos.sh  ubuntu.sh
.github/workflows/: code.yml
doc/: audio-input-flow.pu  audio-output-flow.pu  common.iuml  flow_input.pu  flow_output.pu
netsound/: Cargo.toml
netsound-audio-backend-cpal/: Cargo.toml
netsound-audio-backend-cpal/src/: backend.rs  builder.rs  choose_format.rs  choose_stream_config.rs  compatible_sample.rs  control.rs  error.rs  errors.rs  io.rs  lib.rs
netsound-codec-opus/: Cargo.toml
netsound-codec-opus/src/: common.rs  decoder.rs  encoder.rs  error.rs  lib.rs  meta.rs
netsound-core/: Cargo.toml
netsound-core/src/: audio_backend.rs  format.rs  formats.rs  lib.rs  match_channels.rs  sample.rs  sample_type_name.rs
netsound-core/src/audio/: backend.rs  builder.rs  mod.rs
netsound-core/src/audio/implementation/cpal_backend/: builder.rs  choose_format.rs  default.rs
netsound-core/src/buf/: mod.rs  vecdeque.rs
netsound-core/src/buf/vecdeque/: tests.rs
netsound-core/src/codec/: error.rs  mod.rs
netsound-core/src/codec/opus/: decoder.rs  encoder.rs  error.rs  mod.rs
netsound-core/src/codec/raw/: codec.rs  mod.rs
netsound-core/src/future/: mod.rs  select_first.rs
netsound-core/src/io/: async_read_items.rs  async_write_items.rs  wait_mode.rs
netsound-core/src/io/ext/: mod.rs  read_exact_items.rs  read_items.rs  write_items.rs
netsound-core/src/net/: mod.rs  recv.rs  send.rs
netsound-core/src/net/send/: multisend.rs
netsound-core/src/pcm/: frame.rs  mod.rs  sample.rs  sample_rate.rs  stream_config.rs
netsound-core/src/samples_filter/: add_silent_channels.rs  cut_extra_channels.rs  mod.rs  normalize_channels.rs
netsound-core/src/transcode/: mod.rs  resampler.rs
netsound-core/src/transcode_service/: mod.rs
netsound/src/: audio_backend_config.rs  audio_backends.rs  audio_params.rs  cli.rs  codec_config.rs  main.rs  stream_configs.rs
src/: audio_backends.rs  format.rs  formats.rs  log.rs  main.rs  match_channels.rs  positional_allocator.rs  preallocated_map.rs  sample.rs  samples.rs
src/audio/: backend.rs  build_flow.rs  builder.rs  input.rs  mod.rs
src/audio/cpal_backend/: backend.rs  builder.rs  choose_format.rs  default.rs  errors.rs  format.rs  input.rs  io.rs  mod.rs  output.rs
src/audio/cpal_backend/conv/: input.rs
src/audio/cpal_backend/format/: assert.rs  interop.rs  mod.rs
src/audio/implementation/: mod.rs
src/audio/implementation/cpal_backend/: backend.rs  builder.rs  choose_format.rs  compatible_sample.rs  errors.rs  io.rs  mod.rs
src/audio/implementation/cpal_backend/conv/: output.rs
src/audio/implementation/cpal_backend/format/: assert.rs  deduce.rs  interop.rs
src/audio/implementation/pulse_simple_backend/: backend.rs  builder.rs  compatible_sample.rs  mod.rs  util.rs
src/audio/pulse_simple_backend/: mod.rs  util.rs
src/buf/: mod.rs  vecdeque.rs
src/buf/sample_buffer/: mod.rs  vecdeque.rs
src/buf/vecdeque/: tests.rs
src/codec/: error.rs  mod.rs
src/codec/opus/: decoder.rs  encoder.rs  error.rs  mod.rs
src/codec/raw/: codec.rs  mod.rs
src/future/: select_first.rs
src/io/: async_items_available.rs  async_read_items.rs  async_write_items.rs  mod.rs
src/io/ext/: items_available.rs  mod.rs  read_exact_items.rs  read_items.rs  wait_for_items_available.rs  write_items.rs
src/net/: mod.rs  recv.rs  send.rs  udp_codec.rs
src/net/send/: multisend.rs
src/samples_filter/: add_silent_channels.rs  cut_extra_channels.rs  mod.rs  normalize_channels.rs
src/sync/: mod.rs
src/test_util/: mod.rs  unordered_eq.rs
src/transcode/: noop.rs  resampler.rs
src/transcode_service/: mod.rs
src/transcoder/: mod.rs  noop.rs  resampler.rs
support/lldb/: prelaunch.py
utils/: netconn  netsrv  play  rec
