[package]
name = "netsound"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
mio = "0.6"
audiopus = "0.1"
failure = "0.1"
cpal = "0.10"
sample = "0.10"
futures-preview = { version = "0.3.0-alpha.19", features = ["unstable", "async-await", "bilock"] }
tokio = "0.2.0-alpha.6"
async-trait = "0.1"
slog = { version = "2.5", features = ["max_level_trace"] }
slog-env-cfg = "0.5"
slog-scope = "4.1"

[dependencies.libpulse-binding]
git = "https://github.com/MOZGIII/pulse-binding-rust.git"
rev = "251032e29fa5ce287a814774d29378932afc0ab0"
default-features = false
optional = true

[dependencies.libpulse-simple-binding]
git = "https://github.com/MOZGIII/pulse-binding-rust.git"
rev = "251032e29fa5ce287a814774d29378932afc0ab0"
default-features = false
optional = true

[dependencies.crossbeam-utils]
version = "0.6"
optional = true

[dev-dependencies]
futures-test-preview = "0.3.0-alpha.19"

[features]
pulse_simple_backend = ["libpulse-binding", "libpulse-simple-binding", "crossbeam-utils"]
