[package]
name = "netsound"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
audiopus = "0.2"
failure = "0.1"
cpal = "0.10"
sample = "0.10"
futures-preview = { version = "0.3.0-alpha.19", features = ["unstable", "async-await", "bilock"] }
tokio = "0.2.0-alpha.6"
async-trait = "0.1"
slog = { version = "2.5", features = ["nested-values"] }
slog-json = { version = "2.3", features = ["nested-values"] }
slog-env-cfg = "0.6"
slog-scope = "4.1"
slog-scope-futures = "0.1"
slog_derive = "0.2"
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
libpulse-binding = { version = "2.13", default-features = false, optional = true }
libpulse-simple-binding = { version = "2.13", default-features = false, optional = true }
crossbeam-utils = { version = "0.6", optional = true }

[dev-dependencies]
futures-test-preview = "0.3.0-alpha.19"

[features]
pulse_simple_backend = ["libpulse-binding", "libpulse-simple-binding", "crossbeam-utils"]
trace = ["slog/max_level_trace"]

[patch.crates-io]
audiopus_sys = { git = "https://github.com/MOZGIII/audiopus_sys.git", branch = "bindgen-version" }
