[package]
name = "netsound-core"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
async-trait = "0.1"
audiopus = "0.2"
byteorder = "1.3"
dasp_frame = "0.11"
dasp_interpolate = { version = "0.11", features = ["linear"] }
dasp_sample = "0.11"
dasp_signal = "0.11"
derivative = "2"
failure = "0.1"
futures = { version = "0.3", features = ["unstable", "bilock"] }
serde = { version = "1.0", features = ["derive"] }
slog = "2.5"
slog_derive = "0.2"
slog-env-cfg = "0.6"
slog-scope = "4.3"
slog-scope-futures = "0.1"
tokio = { version = "1.0", features = ["net", "io-util"] }

[dev-dependencies]
futures-test = "0.3"

[features]
trace = ["slog/max_level_trace"]
