[package]
name = "netsound"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
netsound-core = { version = "0.1", path = "../netsound-core" }
netsound-audio-backend-cpal = { version = "0.1", path = "../netsound-audio-backend-cpal" }
futures = "0.3"
slog = "2.5"
slog-env-cfg = "0.6"
slog-scope = "4.3"
tokio = "0.2"

[features]
trace = ["netsound-core/trace"]
