[package]
name = "netsound"
version = "0.1.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
netsound-core = { version = "0.1", path = "../netsound-core" }
netsound-audio-backend-cpal = { version = "0.1", path = "../netsound-audio-backend-cpal" }
anyhow = "1"
futures = "0.3"
slog = "2.7"
slog-env-cfg = "0.6"
slog-scope = "4.3"
structopt = { version = "0.3", features = ["paw"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
trace = ["netsound-core/trace"]
